# motive

./: .envrc  .gitignore  Cargo.toml  Makefile  README.md  alibi  alibi.yml
src/: lib.rs  main.rs  runner.rs  trigger.rs
src/alibi/: ast.rs  functions.rs  mod.rs
src/alibi/lexer/: mod.rs  token.rs
src/alibi/parser/: entry.rs  mod.rs
src/commands/: init.rs  mod.rs
src/config/: mod.rs  task.rs
