[package]
name = "motive"
version = "0.0.1"
edition = "2021"

[dependencies]
oxide = {path = "./libs/oxide"}
clap = "3.0.0-beta.5"
clearscreen = "1.0.7"
colored = "2.0.0"
serde_json = "1.0.72"
serde_yaml = "0.8.21"
async-std = {version = "1.10.0", features = ["attributes"]}
futures = "0.3.18"

[dependencies.serde]
version = "1.0.130"
features = ["derive"]

[dependencies.chrono]
version = "0.4.19"
features = ["serde"]

[dependencies.ctrlc]
version = "3.2.1" 
features = ["termination"]
