[package]
name = "motive"
version = "0.0.2"
edition = "2021"

[dependencies]
oxide = {path = "./libs/oxide"}
clap = "3.0.0-beta.5"
clearscreen = "1.0.7"
colored = "2.0.0"
serde_json = "1.0.72"
serde_yaml = "0.8.21"
async-std = {version = "1.10.0", features = ["attributes"]}
futures = "0.3.18"
libc = "0.2.108"
nix = "0.23.0"
lazy_static = "1.4.0"
regex = "1.5.4"
logos = "0.12.0"
nom-peg = "0.1.1"
nom = "7.1.0"
rowan = "0.15.1"
num-derive = "0.3.3"
num-traits = "0.2.14"
text-size = "1.1.0"

[dependencies.serde]
version = "1.0.130"
features = ["derive"]

[dependencies.chrono]
version = "0.4.19"
features = ["serde"]

[dependencies.ctrlc]
version = "3.2.1" 
features = ["termination"]
